conf/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app: orsp
  name: orsp-service
  namespace: ${NAMESPACE}
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: orsp
  sessionAffinity: None
  type: NodePort
