conf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ${HOST_IP}
  labels:
    app: ${REPO_NAME}
  name: ${REPO_NAME}-ingress
  namespace: ${NAMESPACE}
spec:
  defaultBackend:
    service:
      name: ${REPO_NAME}-service
      port: 
        name: http
  rules:
  - host: ${HOST_NAME}
    http:
      paths:
      - backend:
          service:
            name: ${REPO_NAME}-service
            port: 
              name: http
  tls:
  - hosts:
    - ${HOST_NAME}
    secretName: ${TLS_CERT_SECRET}
